--- a/new/src/views/homepage-characters.pug
+++ b/new/src/views/homepage-characters.pug
@@ -3,34 +3,34 @@
         h2.my-4.text-center.text-2xl.font-bold Characters
         ul.items-center.my-2(class='grid grid-flow-col auto-cols-max')
           li.p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Anak')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-100 hover:opacity-100' title='Anak')
               img.max-w-none.object-cover(width=50 height=50 src="assets/characters/Anak.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ang Mata')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Ang Mata')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Ang Mata.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Bulawan Dakong Umang')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Bulawan Dakong Umang')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Bulawan Dakong Umang.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Jim')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Jim')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Jim.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='President Serena Barbate')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='President Serena Barbate')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/President Serena Barbate.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ryoko')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Ryoko')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Ryoko.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='The Founder')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='The Founder')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/The Founder.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='The Visayans')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='The Visayans')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/The Visayans.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Tom')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Tom')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Tom.svg")
           li
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Umang')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Umang')
               img.max-w-none.object-cover(width=60 height=60 src="assets/characters/Umang.svg")
         div.py-12
           h3.my-4.text-xl.font-bold Anak
