--- a/new/src/views/homepage-locations.pug
+++ b/new/src/views/homepage-locations.pug
@@ -11,34 +11,34 @@
     div.my-12
         .items-center.my-2(class='grid grid-cols-2 gap-4 p-4 mx-auto md:grid-cols-3')
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Bulawan City')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Bulawan City')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Bulawan.svg")
               h3.my-4.text-xl.font-bold.text-center Bulawan City
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Camiguin Island')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Camiguin Island')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Camiguin.svg")
               h3.my-4.text-xl.font-bold.text-center Camiguin Island
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Helios Shuttle')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Helios Shuttle')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Helios.svg")
               h3.my-4.text-xl.font-bold.text-center Helios Shuttle
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Ibalhin Control')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Ibalhin Control')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Ibalhin.svg")
               h3.my-4.text-xl.font-bold.text-center Ibalhin Control
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Kamigen Island')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Kamigen Island')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Kamigen.svg")
               h3.my-4.text-xl.font-bold.text-center Kamigen Island
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Makaptan\'s Lair')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Makaptan\'s Lair')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Makaptan.svg")
               h3.my-4.text-xl.font-bold.text-center Makaptan's Lair
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Old Turtle City')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-50 hover:opacity-100' title='Old Turtle City')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Old Turtle City.svg")
               h3.my-4.text-xl.font-bold.text-center Old Turtle City
           .p-2.m-2
-            a(rel='noopener noreferrer' href='#' class='dark:border-transparent' title='Shangri Lah')
+            a(rel='noopener noreferrer' href='#' class='dark:border-transparent opacity-100 hover:opacity-100' title='Shangri Lah')
               img.object-contain.object-center.w-full.h-72(src="assets/locations/icons/Shangri Lah.svg")
               h3.my-4.text-xl.font-bold.text-center Shangri Lah
