--- a/new/src/views/homepage-characters.pug
+++ b/new/src/views/homepage-characters.pug
@@ -1,5 +1,5 @@
 .container.mx-auto.max-w-2xl
-    div.mt-32.mb-12
+    #character-slider.mt-32.mb-12
         h2.my-4.text-center.text-2xl.font-bold Characters
         ul.items-center.my-2(class='grid grid-flow-col auto-cols-max')
           li.p-2.m-2
