Rearranging folders and kicking off comics page

--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -1,16 +1,16 @@
 doctype html
 html
   head
-    title
+    title Kamigen
     //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
   body
-    include views/homepage-header
-    include views/homepage-comics
-    include views/homepage-characters
-    include views/homepage-locations
-    include views/homepage-news
+    include ../templates/homepage-header
+    include ../templates/homepage-comics
+    include ../templates/homepage-characters
+    include ../templates/homepage-locations
+    include ../templates/homepage-news
     .container.mx-auto.max-w-4xl.clear-both
       div.my-12
         h2.my-8.text-2xl.font-bold.text-center Links
