--- a/new/src/pages/comics.pug
+++ b/new/src/pages/comics.pug
@@ -9,7 +9,55 @@ html
     //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
-  body.bg-black
-    .container
+  body.bg-black.text-white.overflow-x-hidden
+    header
+      .flex.items-center
+        div Issue 01 - Welcome to the Island
+        div Menu
+        div Close
+      div(style="overflow-x: auto;")
+        .m-4.flex.grid-flow-col.auto-cols-max.w-full.flex-1
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 1.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 2.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 3.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 4.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 5.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 6.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 7.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 8.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 9.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 10.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 11.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 12.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 13.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 14.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 15.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 16.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 17.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 18.png')
+          button.p-4
+            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 19.png')
+    main.m-16
+      img.mx-auto.w-auto(class="h-[100vw - 4rem]" src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
     script(src="./alpine.js")
     script(src='./main.js')
