--- a/new/src/pages/comics.pug
+++ b/new/src/pages/comics.pug
@@ -15,48 +15,71 @@ html
         div Issue 01 - Welcome to the Island
         div Menu
         div Close
-      div(style="overflow-x: auto;")
-        .m-4.flex.grid-flow-col.auto-cols-max.w-full.flex-1
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 1.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 2.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 3.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 4.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 5.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 6.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 7.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 8.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 9.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 10.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 11.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 12.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 13.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 14.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 15.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 16.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 17.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 18.png')
-          button.p-4
-            img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 19.png')
+      .m-4.flex(style="overflow-x: auto;")
+        button.p-4.inline-block
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 1.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 2.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 3.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 4.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 5.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 6.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 7.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 8.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 9.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 10.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 11.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 12.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 13.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 14.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 15.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 16.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 17.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 18.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 19.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 20.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 21.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen_Page 22.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 23-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 24-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 25-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 26-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 27-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 28-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 29-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Page 30-01.png')
+        button.p-4
+          img.w-36.h-auto(src='assets/comics/SD/Kamigen Issue 02 Cover-01.png')
     main.m-16
       img.mx-auto.w-auto(class="h-[100vw - 4rem]" src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
     script(src="./alpine.js")
