--- a/new/src/styles/main.css
+++ b/new/src/styles/main.css
@@ -138,3 +138,17 @@ body {
 .logo:not(:hover) .badlit_logo {
     animation: blurout 0.35s ease 1 forwards;
 }
+
+.thumbnail .keen-slider__slide {
+    font-size: 30px;
+    margin-top: 10px;
+    height: 100px;
+}
+
+.thumbnail .keen-slider__slide {
+    cursor: pointer;
+}
+
+.thumbnail .keen-slider__slide.active {
+    border: 2px dashed black;
+}
