--- a/new/src/templates/homepage-comics.pug
+++ b/new/src/templates/homepage-comics.pug
@@ -3,7 +3,7 @@
         .keen-slider
           .keen-slider__slide
             a(href='/comics.html')
-              img(src='assets/Kamigen Issue 01 Cover-01.png')
+              img(src='assets/comics/SD/Kamigen Issue 01 Cover-01.png')
             .slide-content
               .slide-content-inner(class="p-4 lg:pl-4 xl:pl-8 lg:pr-4 xl:pr-8 xl:py-16")
                 a(href='/comics.html')
@@ -12,7 +12,7 @@
                 p(class="md:text-lg") The first issue introduces Kamigen Island and explains a bit about the current state of the world.
           .keen-slider__slide
             a(href='/comics.html')
-              img(src='assets/Kamigen Issue 02 Cover-01.png')
+              img(src='assets/comics/SD/Kamigen Issue 02 Cover-01.png')
             .slide-content
               .slide-content-inner(class="p-4 lg:pl-4 xl:pl-8 lg:pr-4 xl:pr-8 xl:py-16")
                 a(href='/comics.html')
@@ -21,7 +21,7 @@
                 p(class="md:text-lg") Ryoko is part of a team tasked with saving the Earth from a second water comet and the human race from extinction!
           .keen-slider__slide
             a(href='/comics.html')
-              img(src='assets/Kamigen Issue 03 Cover-01.png')
+              img(src='assets/comics/SD/Kamigen Issue 03 Cover-01.png')
             .slide-content
               .slide-content-inner(class="p-4 lg:pl-4 xl:pl-8 lg:pr-4 xl:pr-8 xl:py-16")
                 a(href='/comics.html')
@@ -30,7 +30,7 @@
                 p(class="md:text-lg") A hundred million years ago, an advanced society prospered from advancements based on ancient relics from a long dead race.
           .keen-slider__slide
             a(href='/comics.html')
-              img(src='assets/Kamigen Issue 04 Cover-01.png')
+              img(src='assets/comics/SD/Kamigen Issue 04 Cover-01.png')
             .slide-content
               .slide-content-inner(class="p-4 lg:pl-4 xl:pl-8 lg:pr-4 xl:pr-8 xl:py-16")
                 a(href='/comics.html')
@@ -39,7 +39,7 @@
                 p(class="md:text-lg") Anak is on a quest to find out why he's the last of his kind - oh and he might as well save the human race along the way!
           .keen-slider__slide
             a(href='/comics.html')
-              img(src='assets/Kamigen Issue 05 Cover-01.png')
+              img(src='assets/comics/SD/Kamigen Issue 05 Cover-01.png')
             .slide-content
               .slide-content-inner(class="p-4 lg:pl-4 xl:pl-8 lg:pr-4 xl:pr-8 xl:py-16")
                 a(href='/comics.html')
