Updating to new new site

--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -6,39 +6,6 @@ html
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
   body
-    include ../templates/homepage-header
-    include ../templates/homepage-comics
-    include ../templates/homepage-characters
-    include ../templates/homepage-locations
-    include ../templates/homepage-news
-    .container.mx-auto.max-w-4xl.clear-both
-      div.my-12
-        h2.my-8.text-2xl.font-bold.text-center Links
-        .ui.grid.gap-4(class="grid-flow-cols grid-cols-1 md:grid-cols-4")
-          .p-4
-            h3.my-4.text-xl.font-bold Kamigen Online
-            p Some of our other pages, we hope you like them!
-            br
-            a.block.my-2.p-4.gradient-light-grey(href='#') Facebook
-            a.block.my-2.p-4.gradient-light-grey(href='#') Github
-            a.block.my-2.p-4.gradient-light-grey(href='#') Instagram
-            a.block.my-2.p-4.gradient-light-grey(href='#') Merchandise
-          .p-4
-            h3.my-4.text-xl.font-bold Look who's tweeting
-            p People talking about Kamigen on Twitter
-          .p-4
-            h3.my-4.text-xl.font-bold Visayan Culture
-            p Learn more about Visayan culture.
-            br
-            a.block.my-2.p-4.gradient-light-grey(href='#') Akopito
-            a.block.my-2.p-4.gradient-light-grey(href='#') Aswang Project
-            a.block.my-2.p-4.gradient-light-grey(href='#') Filipiknow
-          .p-4
-            h3.my-4.text-xl.font-bold About
-            p Kamigen is a solarpunk world based around Visayan culture.
-            br
-            p This media franchise is independently developed by Open Studios.
-    .container.mx-auto.max-w-4xl
-      .float-right.p-8 © 2022 Open Studios
+    img.w-full.h-auto(src='assets/page1_4k_hq.jpg')
     script(src="./alpine.js")
-    script(src='./main.js')
+  script(src='./main.js')
