--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -6,6 +6,6 @@ html
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
   body
-    img.w-full.h-auto(src='assets/page1_4k_hq.jpg')
+    img.w-full.h-auto(src='assets/page1_hq_background.jpg')
     script(src="./alpine.js")
   script(src='./main.js')
