--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -5,7 +5,59 @@ html
     //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
+    style.
+      body
+      {
+        margin: 0;
+      }
+
+      .plate {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
+
+      .building {
+        margin-top: 119%;
+        left:0;
+        right: 0;
+        z-index: 2;
+      }
+
+      .water
+      {
+        bottom:0;
+        left:0;
+        right: 0;
+        z-index: 1;
+        filter: url("#watereffect");
+      }
+
+      .water img {
+        margin-top: 159.4%;
+      }
+
+      .background {
+        top:0;
+        left:0;
+        right: 0;
+        z-index: 0;
+      }
   body
-    img.w-full.h-auto(src='assets/page1_hq_background.jpg')
+    .p-0.m-0
+      .building.plate
+        img.w-full.h-auto(src='assets/page1_hq_building.png')
+      .background.plate
+        img.w-full.h-auto(src='assets/page1_hq_background.jpg')
+      .water.plate
+        img.w-full.h-auto(src='assets/page1_hq_water_mask.png')
+    svg.hidden.
+      <filter id="watereffect" x="0" y="0" width="100%" height="100%">
+        <feTurbulence id="sea-filter" numOctaves="30" seed="2" baseFrequency="0.02 0.05"></feTurbulence>
+        <feDisplacementMap scale="20" in="SourceGraphic"></feDisplacementMap>
+        <animate xlink:href="#sea-filter" attributeName="baseFrequency" dur="60s" 
+        keyTimes="0;0.5;1" values="0.02 0.06;0.04 0.08;0.02 0.06" repeatCount="indefinite"/>
+      </filter>
+
     script(src="./alpine.js")
   script(src='./main.js')
