--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -5,6 +5,38 @@ html
     //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0')
     link(rel='stylesheet' href='./main.css')
+    script.
+      function start() {
+
+        let time = 0;
+        let direction = 'up'
+
+        animate ( time );
+        
+        function animate( time ) {
+          time = parseInt(time) + 1;
+          var elem = document.getElementById("myDiv");
+          var style = window.getComputedStyle(elem);
+
+          let currentTop = style.marginTop.replace('px', '');
+
+          let change = ( Math.cos( time ));
+
+          document.getElementById("myDiv").style.marginTop = (parseFloat(currentTop) + 1 * change) + "px";
+          window.requestAnimationFrame( animate )
+        }
+      };
+      function docReady(fn) {
+          // see if DOM is already available
+          if (document.readyState === "complete" || document.readyState === "interactive") {
+              // call on next available tick
+              setTimeout(fn, 1);
+          } else {
+              document.addEventListener("DOMContentLoaded", fn);
+          }
+      }
+
+      docReady(start);
     style.
       body
       {
@@ -45,7 +77,7 @@ html
       }
   body
     .p-0.m-0
-      .building.plate
+      .building.plate#myDiv
         img.w-full.h-auto(src='assets/page1_hq_building.png')
       .background.plate
         img.w-full.h-auto(src='assets/page1_hq_background.jpg')
