--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -5,80 +5,8 @@ html
     //- base(href='/')
     meta(name='viewport' content='width=device-width, user-scalable=yes, minimum-scale=1.0, maximum-scale=25.0')
     link(rel='stylesheet' href='./main.css')
-    script.
-      function start() {
-
-        let time = 0;
-        let direction = 'up';
-
-        animate ( time );
-
-        function animate( time ) {
-          let newTime = parseInt(time) + 1;
-
-          var elem = document.getElementById("myDiv");
-          var style = window.getComputedStyle(elem);
-
-          let currentTop = style.marginTop.replace('px', '');
-
-          let change = ( Math.sin(  newTime ));
-
-          document.getElementById("myDiv").style.marginTop = (parseFloat(currentTop) + 1 * change) + "px";
-          time = newTime;
-          window.requestAnimationFrame( animate )
-        }
-      };
-      function docReady(fn) {
-        // see if DOM is already available
-        if (document.readyState === "complete" || document.readyState === "interactive") {
-          // call on next available tick
-          setTimeout(fn, 1);
-        } else {
-          document.addEventListener("DOMContentLoaded", fn);
-        }
-      }
-
-      docReady(start);
-    style.
-      body
-      {
-        margin: 0;
-      }
-
-      .plate {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-      }
-
-      .building {
-        margin-top: 119%;
-        left:0;
-        right: 0;
-        z-index: 2;
-      }
-
-      .water
-      {
-        bottom:0;
-        left:0;
-        right: 0;
-        z-index: 1;
-        filter: url("#watereffect");
-      }
-
-      .water img {
-        margin-top: 159.4%;
-      }
-
-      .background {
-        top:0;
-        left:0;
-        right: 0;
-        z-index: 0;
-      }
   body
-    .p-0.m-0
+    #page1.p-0.m-0
       .building.plate#myDiv
         img.w-full.h-auto(src='assets/page1_hq_building.png')
       .background.plate
