--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -21,5 +21,6 @@ html
         keyTimes="0;0.5;1" values="0.02 0.06;0.04 0.08;0.02 0.06" repeatCount="indefinite"/>
       </filter>
 
-    script(src="./alpine.js")
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.145.0/three.min.js')
+    script(src='./alpine.js')
     script(src='./main.js')
