Implemented Three JS based building with texture filters

--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -7,8 +7,7 @@ html
     link(rel='stylesheet' href='./main.css')
   body
     #page1.p-0.m-0
-      .building.plate#myDiv
-        img.w-full.h-auto(src='assets/page1_hq_building.png')
+      canvas.overlay.plate
       .background.plate
         img.w-full.h-auto(src='assets/page1_hq_background.jpg')
       .water.plate
