--- a/new/src/styles/main.css
+++ b/new/src/styles/main.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 #page1 .plate {
@@ -12,10 +13,11 @@ body {
     height: 100%;
 }
 
-#page1 .building {
-    margin-top: 119%;
+#page1 canvas.overlay.plate {
     left: 0;
     right: 0;
+    top: 0;
+    bottom: 0;
     z-index: 2;
 }
 
