--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -21,5 +21,6 @@ html
       </filter>
 
     script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.145.0/three.min.js')
+    script(src='https://cdn.jsdelivr.net/gh/mrdoob/three.js@r145/examples/js/loaders/GLTFLoader.js')
     script(src='./alpine.js')
     script(src='./main.js')
