Adding nice looking seagull movement

--- a/new/src/pages/index.pug
+++ b/new/src/pages/index.pug
@@ -20,6 +20,7 @@ html
         keyTimes="0;0.5;1" values="0.02 0.06;0.04 0.08;0.02 0.06" repeatCount="indefinite"/>
       </filter>
 
+    script(src='https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.145.0/three.min.js')
     script(src='https://cdn.jsdelivr.net/gh/mrdoob/three.js@r145/examples/js/loaders/GLTFLoader.js')
     script(src='./alpine.js')
